# cpp-project-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: Docs.cmake  Tools.cmake
docs/: Doxyfile.in
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  Sources.cmake
src/lib/include/lib/: lib.hpp
src/lib/src/: lib.cpp
test/: CMakeLists.txt
test/lib_test/: CMakeLists.txt  lib_test.cpp
